# routes.go
@@ -1,0 +1,19 @@
+package main
+
+import (
+	"fuzz.codes/fuzzercloud/workerengine/handlers"
+	"github.com/gofiber/contrib/websocket"
+	"github.com/gofiber/fiber/v2"
+)
+
+func RegisterRoutes(app *fiber.App) {
+	task := app.Group("/task")
+	task.Post("/", handlers.CreateTask)
+	task.Get("/:id", handlers.GetTask)
+	task.Get("/:id/stdout", handlers.GetTaskOutput)
+	task.Get("/:id/stream", websocket.New(handlers.StreamTaskOutput))
+
+	tool := app.Group("/tool")
+	tool.Get("/", handlers.GetAllTools)
+	tool.Get("/:name", handlers.GetTool)
+}
